<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">
        
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            app:cardBackgroundColor="@color/purple_light"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/BienvenidoPrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BienvenidoPrincipal"
                    android:textColor="#FF000000"
                    android:fontFamily="@font/youngserif"
                    android:textSize="20sp">

                </TextView>
                
                <ProgressBar
                    android:id="@+id/progressBarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center">

                </ProgressBar>

                <!--Nombres-->
                <TextView
                    android:id="@+id/NombresPrincipal"
                    android:text="@string/NombresPrincipal"
                    android:visibility="gone"
                    android:textColor="#FF000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/youngserif"
                    android:textSize="20sp">

                </TextView>
                <!--Correo-->
                <TextView
                    android:id="@+id/CorreoPrincipal"
                    android:text="@string/CorreoPrincipal"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"
                    android:fontFamily="@font/youngserif"
                    android:textSize="20sp">

                </TextView>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/CerrarSesion"
            android:text="@string/CerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>